[project]
name = "TeleShelf"
version = "0.1.0"
description = "A bookshelf, but for Telegram media"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "orjson>=3.10.18",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "sqladmin>=0.21.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
